Bug 308125 - KDELib crash
Summary: KDELib crash
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
: 308176 309237 310724 311213 313220 313810 315791 318545 318582 320136 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-09 13:10 UTC by John
Modified: 2013-05-22 15:06 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John 2012-10-09 13:10:19 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.9.2
Qt Version: 4.8.3
Operating System: Linux 3.6.1-1.fc18.i686.PAE i686
Distribution (Platform): Fedora RPMs

-- Information about the crash:
- What I was doing when the application crashed:
I was running yum udpates through a Konsole terminal running as su.

The crash can be reproduced some of the time.

-- Backtrace:
Application: KDE Daemon (kded4), signal: Segmentation fault
Using host libthread_db library "/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0xb77d5780 (LWP 1813))]

Thread 4 (Thread 0xb4ebfb40 (LWP 1824)):
#0  0xb77ff424 in __kernel_vsyscall ()
#1  0x4449983b in poll () from /lib/libc.so.6
#2  0x4470b2ec in g_poll () from /lib/libglib-2.0.so.0
#3  0x446fc450 in g_main_context_iterate.isra.22 () from /lib/libglib-2.0.so.0
#4  0x446fc933 in g_main_loop_run () from /lib/libglib-2.0.so.0
#5  0xb5a9cefb in gdbus_shared_thread_func () from /usr/lib/libgio-2.0.so.0
#6  0x447225d4 in g_thread_proxy () from /lib/libglib-2.0.so.0
#7  0x44573aff in start_thread () from /lib/libpthread.so.0
#8  0x444a3d4e in clone () from /lib/libc.so.6

Thread 3 (Thread 0xb44ffb40 (LWP 1825)):
#0  0xb77ff424 in __kernel_vsyscall ()
#1  0x4449983b in poll () from /lib/libc.so.6
#2  0x4470b2ec in g_poll () from /lib/libglib-2.0.so.0
#3  0x446fc450 in g_main_context_iterate.isra.22 () from /lib/libglib-2.0.so.0
#4  0x446fc5b2 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0x4538386f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/libQtCore.so.4
#6  0x4534fd4d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/libQtCore.so.4
#7  0x45350049 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/libQtCore.so.4
#8  0x45237efc in QThread::exec() () from /lib/libQtCore.so.4
#9  0x4532dd3e in QInotifyFileSystemWatcherEngine::run() () from /lib/libQtCore.so.4
#10 0x4523b38a in QThreadPrivate::start(void*) () from /lib/libQtCore.so.4
#11 0x44573aff in start_thread () from /lib/libpthread.so.0
#12 0x444a3d4e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xb361fb40 (LWP 1969)):
#0  0x4458cdad in clock_gettime () from /lib/librt.so.1
#1  0x4529ab16 in qt_gettime() () from /lib/libQtCore.so.4
#2  0x4538425f in QTimerInfoList::updateCurrentTime() () from /lib/libQtCore.so.4
#3  0x095e3dcc in ?? ()

Thread 1 (Thread 0xb77d5780 (LWP 1813)):
[KCrash Handler]
#6  0x455ec164 in Solid::Control::WiredNetworkInterfaceNm09::carrier() const () from /lib/libsolidcontrolnm09.so.4
#7  0x45627bf7 in WiredNetworkInterfaceActivatableProvider::handleAdd(Knm::Connection*) () from /lib/libknmservice.so.4
#8  0x4561d664 in ConnectionList::addConnection(Knm::Connection*) () from /lib/libknmservice.so.4
#9  0xb4fdc913 in NMDBusSettingsConnectionProvider::initialiseAndRegisterRemoteConnection(QString const&) () from /lib/libknm_nm.so
#10 0xb4fe0300 in NMDBusSettingsConnectionProvider::initConnections() () from /lib/libknm_nm.so
#11 0xb4fe0a87 in NMDBusSettingsConnectionProvider::serviceOwnerChanged(QString const&, QString const&, QString const&) () from /lib/libknm_nm.so
#12 0xb4f9e295 in NMDBusSettingsConnectionProvider::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /lib/libknm_nm.so
#13 0x4536999e in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /lib/libQtCore.so.4
#14 0x4551aef6 in QDBusConnectionInterface::serviceOwnerChanged(QString const&, QString const&, QString const&) () from /lib/libQtDBus.so.4
#15 0x4551b6e4 in QDBusConnectionInterface::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /lib/libQtDBus.so.4
#16 0x4536999e in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /lib/libQtCore.so.4
#17 0x4551b056 in QDBusConnectionInterface::NameOwnerChanged(QString const&, QString const&, QString const&) () from /lib/libQtDBus.so.4
#18 0x4551b6b4 in QDBusConnectionInterface::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /lib/libQtDBus.so.4
#19 0x4551bb74 in QDBusConnectionInterface::qt_metacall(QMetaObject::Call, int, void**) () from /lib/libQtDBus.so.4
#20 0x454d9e26 in QDBusConnectionPrivate::deliverCall(QObject*, int, QDBusMessage const&, QList<int> const&, int) () from /lib/libQtDBus.so.4
#21 0x454e451e in QDBusCallDeliveryEvent::placeMetaCall(QObject*) () from /lib/libQtDBus.so.4
#22 0x45367963 in QObject::event(QEvent*) () from /lib/libQtCore.so.4
#23 0x45c89fbc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/libQtGui.so.4
#24 0x45c8ea7f in QApplication::notify(QObject*, QEvent*) () from /lib/libQtGui.so.4
#25 0x46923a72 in KApplication::notify(QObject*, QEvent*) () from /lib/libkdeui.so.5
#26 0x453512ae in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /lib/libQtCore.so.4
#27 0x45355255 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib/libQtCore.so.4
#28 0x453554dd in QCoreApplication::sendPostedEvents(QObject*, int) () from /lib/libQtCore.so.4
#29 0x453836c5 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib/libQtCore.so.4
#30 0x446fc12b in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#31 0x446fc4d0 in g_main_context_iterate.isra.22 () from /lib/libglib-2.0.so.0
#32 0x446fc5b2 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#33 0x45383852 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/libQtCore.so.4
#34 0x45d3c52b in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/libQtGui.so.4
#35 0x4534fd4d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/libQtCore.so.4
#36 0x45350049 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/libQtCore.so.4
#37 0x4535558b in QCoreApplication::exec() () from /lib/libQtCore.so.4
#38 0x45c87e35 in QApplication::exec() () from /lib/libQtGui.so.4
#39 0x455423ba in kdemain () from /lib/libkdeinit4_kded4.so
#40 0x0804866c in main ()

Reported using DrKonqi
Comment 1 John 2012-10-09 13:33:15 UTC
I was running a yum update command in the Konsole while in a KDE desktop session.  Attempting to install apper in Fedora18.  Keeps getting dependency errors.
 > From: christoph@maxiom.de
> To: john.white77@live.com
> Subject: [Bug 308125] KDELib crash
> Date: Tue, 9 Oct 2012 13:23:59 +0000
> 
> https://bugs.kde.org/show_bug.cgi?id=308125
> 
> Christoph Feck <christoph@maxiom.de> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>           Component|kded                        |KDED Module
>            Assignee|unassigned-bugs@kde.org     |lamarque@kde.org
>             Product|kdelibs                     |Network Management
> 
> -- 
> You are receiving this mail because:
> You reported the bug.
Comment 2 Lamarque V. Souza 2012-10-09 22:32:18 UTC
Git commit 1efa1798bc20da73473afeb8015f09ea3d2bf79b by Lamarque V. Souza.
Committed on 10/10/2012 at 00:16.
Pushed by lvsouza into branch 'nm09'.

Reimplement this in a more reliable way.

M  +0    -26   libs/service/networkinterfaceactivatableprovider.cpp
M  +0    -3    libs/service/networkinterfaceactivatableprovider.h
M  +1    -1    libs/service/networkinterfaceactivatableprovider_p.h
M  +17   -2    libs/service/wirednetworkinterfaceactivatableprovider.cpp

http://commits.kde.org/networkmanagement/1efa1798bc20da73473afeb8015f09ea3d2bf79b
Comment 3 Lamarque V. Souza 2012-10-09 22:32:18 UTC
Git commit 7eb9acfa39f4487c65fb154b578881d6fd7beffa by Lamarque V. Souza.
Committed on 10/10/2012 at 00:17.
Pushed by lvsouza into branch 'nm09'.

Check for invalid pointer here too.
FIXED-IN: 0.9.0.6

M  +1    -1    libs/service/wirednetworkinterfaceactivatableprovider.cpp
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/7eb9acfa39f4487c65fb154b578881d6fd7beffa
Comment 4 Lamarque V. Souza 2012-10-09 22:33:56 UTC
Git commit 5d7cc62ab384ab9f99474096a570baac41924b3d by Lamarque V. Souza.
Committed on 10/10/2012 at 00:29.
Pushed by lvsouza into branch 'arthur'.

Reimplement this in a more reliable way.

M  +0    -26   libs/service/networkinterfaceactivatableprovider.cpp
M  +0    -3    libs/service/networkinterfaceactivatableprovider.h
M  +1    -1    libs/service/networkinterfaceactivatableprovider_p.h
M  +17   -2    libs/service/wirednetworkinterfaceactivatableprovider.cpp

http://commits.kde.org/networkmanagement/5d7cc62ab384ab9f99474096a570baac41924b3d
Comment 5 Lamarque V. Souza 2012-10-09 22:33:56 UTC
Git commit b737ed1f8548bab6a6f63820e77216edba3950e1 by Lamarque V. Souza.
Committed on 10/10/2012 at 00:30.
Pushed by lvsouza into branch 'arthur'.

Check for invalid pointer here too.
FIXED-IN: 0.9.0.6

M  +1    -1    libs/service/wirednetworkinterfaceactivatableprovider.cpp
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/b737ed1f8548bab6a6f63820e77216edba3950e1
Comment 6 Lamarque V. Souza 2012-10-09 22:39:56 UTC
Git commit 754343420c4756f9555dcbb40d05aa5af21c6d14 by Lamarque V. Souza.
Committed on 10/10/2012 at 00:29.
Pushed by lvsouza into branch 'arthur'.

Reimplement this in a more reliable way.

M  +0    -26   libs/service/networkinterfaceactivatableprovider.cpp
M  +0    -3    libs/service/networkinterfaceactivatableprovider.h
M  +1    -1    libs/service/networkinterfaceactivatableprovider_p.h
M  +17   -2    libs/service/wirednetworkinterfaceactivatableprovider.cpp

http://commits.kde.org/networkmanagement/754343420c4756f9555dcbb40d05aa5af21c6d14
Comment 7 Lamarque V. Souza 2012-10-09 22:39:56 UTC
Git commit 273639592ca174b3ad97d7ab04d1ca368611441d by Lamarque V. Souza.
Committed on 10/10/2012 at 00:30.
Pushed by lvsouza into branch 'arthur'.

Check for invalid pointer here too.
FIXED-IN: 0.9.0.6

M  +1    -1    libs/service/wirednetworkinterfaceactivatableprovider.cpp
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/273639592ca174b3ad97d7ab04d1ca368611441d
Comment 8 Jekyll Wu 2012-10-10 12:38:11 UTC
*** Bug 308176 has been marked as a duplicate of this bug. ***
Comment 9 Jekyll Wu 2012-10-30 07:41:20 UTC
*** Bug 309237 has been marked as a duplicate of this bug. ***
Comment 10 Jekyll Wu 2012-11-26 18:24:16 UTC
*** Bug 310724 has been marked as a duplicate of this bug. ***
Comment 11 Jekyll Wu 2012-12-05 20:03:52 UTC
*** Bug 311213 has been marked as a duplicate of this bug. ***
Comment 12 Jekyll Wu 2013-01-14 09:20:41 UTC
*** Bug 313220 has been marked as a duplicate of this bug. ***
Comment 13 Jekyll Wu 2013-01-24 08:50:22 UTC
*** Bug 313810 has been marked as a duplicate of this bug. ***
Comment 14 Lamarque V. Souza 2013-02-26 11:38:05 UTC
*** Bug 315791 has been marked as a duplicate of this bug. ***
Comment 15 Jekyll Wu 2013-04-18 11:29:23 UTC
*** Bug 318545 has been marked as a duplicate of this bug. ***
Comment 16 Jekyll Wu 2013-04-19 09:45:15 UTC
*** Bug 318582 has been marked as a duplicate of this bug. ***
Comment 17 Jekyll Wu 2013-05-22 15:06:57 UTC
*** Bug 320136 has been marked as a duplicate of this bug. ***