Check for invalid pointer here too.

BUG: 308125
FIXED-IN: 0.9.0.6